# PasteSlash

./: .gitignore  CMakeLists.txt  README.md  UML.puml  main.cpp  pgConfig.txt  user.json
applayer/: CMakeLists.txt  CMakeLists.txt.in  main.cpp
applayer/inc/server/: ALServer.h
applayer/inc/server/calldata/: CheckTokenCD.h  DeleteCodeCD.h  GetCodeCD.h  calldata.h
applayer/inc/usecases/: AbstractUsecase.h  AuthUserUsecase.h  DeleteCodeUsecase.h  GetAllHashesUsecase.h  StoreCodeUsecase.h
applayer/src/server/: ALServer.cpp
applayer/src/server/calldata/: AuthUserCD.cpp  CheckTokenCD.cpp  DeleteCodeCD.cpp  GetAllHashesCD.cpp  GetCodeCD.cpp  RegUserCD.cpp  StoreCodeCD.cpp
applayer/src/usecases/: AbstractUsecase.cpp  AuthUserUsecase.cpp  DeleteCodeUsecase.cpp  GetAllHashesUsecase.cpp  GetCodeUsecase.cpp  RegUserUsecase.cpp  StoreCodeUsecase.cpp
applayer/tests/: handlersTests.cpp  test.cpp
applayer/tools/converter/: GRPCConverter.cpp  GRPCConverter.h
applayer/tools/tcpclient/: TCPClient.cpp  TCPClient.h
database/: CMakeLists.txt  cleaner.cpp  cron_conf
database/include/: Connection.h  Database.h  DatabaseManager.h  DatabaseObject.h  FolderDBManager.h  Meta.h  PasteDBManager.h  PasteManager.h  SqlGenerator.h  UserDBManager.h  UserManager.h  dataFormat.h
database/src/: Connection.cpp  Database.cpp  DatabaseManager.cpp  DatabaseObject.cpp  FolderDBManager.cpp  Meta.cpp  PasteDBManager.cpp  PasteManager.cpp  SqlGenerator.cpp  UserDBManager.cpp
database/test/: test.cpp
inc/: AbstractHandler.h  Application.h  Connection.h  DataBaseWorker.h  GRPCConverter.h  KeyGenerator.h  KeyManager.h  KeyValidation.h  Models.h  Parser.h  Randomize.h  RequestHandler.h  RequestManager.h  Server.h  Session.h  Socket.h  StoreCodeHandler.h  TCPClient.h  TCPServer.h
inc/calldata/: AuthUserCD.h  BaseCallData.h  GetAllHashesCD.h  RegUserCD.h  StoreCodeCD.h
inc/grpc_server/: ALServer.h
inc/server/calldata/: BaseCallData.h
inc/usecases/: AbstractUsecase.h  AuthUserHandler.h  AuthUserUsecase.h  DeleteCodeHandler.h  DeleteCodeUsecase.h  GetCodeHandler.h  GetCodeUsecase.h  RegUserHandler.h  RegUserUsecase.h  StoreCodeUsecase.h
keygenerator/: CMakeLists.txt  main.cpp  Курсовая.pages
keygenerator/inc/: KeyGenerator.h  KeyValidation.h  Randomize.h  Server.h  Session.h
keygenerator/src/: KeyGenerator.cpp  KeyValidation.cpp  Parser.cpp  Randomize.cpp  Server.cpp  Session.cpp
keygenerator/tests/: CMakeLists.txt  endpoint_test.sh  tests.cpp  tests_run
src/: AbstractHandler.cpp  Application.cpp  AuthUserHandler.cpp  Connection.cpp  DataBaseWorker.cpp  DeleteCodeHandler.cpp  GRPCConverter.cpp  GetCodeHandler.cpp  KeyGenerator.cpp  KeyManager.cpp  KeyValidation.cpp  Parser.cpp  Randomize.cpp  RegUserHandler.cpp  RequestHandler.cpp  RequestManager.cpp  Server.cpp  Session.cpp  Socket.cpp  StoreCodeHandler.cpp  TCPClient.cpp  TCPServer.cpp
src/calldata/: AuthUserCD.cpp  BaseCallData.cpp  CheckTokenCD.cpp  DeleteCodeCD.cpp  GetAllHashesCD.cpp  GetCodeCD.cpp  RegUserCD.cpp  StoreCodeCD.cpp
src/grpc_server/: ALServer.cpp
src/server/calldata/: GetCodeCD.cpp
src/usecases/: AbstractHandler.cpp  AuthUserHandler.cpp  AuthUserUsecase.cpp  DeleteCodeHandler.cpp  DeleteCodeUsecase.cpp  GetCodeHandler.cpp  GetCodeUsecase.cpp  RegUserHandler.cpp  RegUserUsecase.cpp  StoreCodeHandler.cpp  StoreCodeUsecase.cpp
tests/: CMakeLists.txt  test.cpp  tests.cpp
tools/grpc/: AppLayer.proto
url-gen/: CMakeLists.txt  KeyGen.cpp  KeyGen.h  KeyManager.cpp  Server.cpp  UML.puml  main.cpp
url-gen/google_tests/: CMakeLists.txt  tests.cpp
url-gen/inc/: KeyGenerator.h  Server.h
url-gen/src/: KeyGenerator.cpp  Randomize.cpp
webserver/: CMakeLists.txt  main.cpp
webserver/client/: client_interface.hpp  tcp_client.hpp
webserver/connection/: connection.hpp  connection_manager.cpp  connection_manager.hpp  connection_manager_interface.hpp
webserver/http_server/: http_server.cpp  http_server.hpp
webserver/inc/: ALClient.h  HTTPServer.h  HandlerRequest.h  HandlerRequest.inl  Listener.h  Output.h  Session.h
webserver/listener/: listener.cpp  listener.hpp
webserver/reply/: reply.hpp
webserver/request/: handler_request.cpp  handler_request.hpp  handler_request.inl  request.hpp  request_handler.hpp  request_parser.cpp  request_parser.hpp
webserver/server/: http_server.cpp  http_server.hpp  server_interface.hpp
webserver/session/: session.cpp  session.hpp  session_interface.hpp
webserver/src/: ALClient.cpp  HTTPServer.cpp  Listener.cpp  Output.cpp  Session.cpp
webserver/tcp_client/: tcp_client.cpp  tcp_client.hpp  tcp_client.inl  tcp_client_interface.hpp
webserver/tools/: header.hpp  task.hpp
webserver/utils/: output.cpp  output.hpp
